# r-calc

./: .gitignore  Cargo.toml  Justfile  Readme.org  Spec.md  default.nix  flake.nix  shell.nix
.cargo/: config.toml
schematic/Calculadorra/: Calculadorra.kicad_pcb  Calculadorra.kicad_prl  Calculadorra.kicad_pro  Calculadorra.kicad_sch  Case.blend  DCR  Export3d.kicad_jobset
src/: computacio.rs  float_math.rs  i2c.rs  lib.rs  main.rs  probability_functions.rs
