[package]
name = "r-calc"
description = "Code for a handheld R Calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hd44780-driver = "0.4.0"
libm = "0.2.11"
ufmt = "0.2.0"

[dependencies.arduino-hal]
git = "https://github.com/Rahix/avr-hal"
features = ["arduino-mega2560"]

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
strip = true
#debug = true
lto = true
opt-level = "s"
